--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -20,6 +20,21 @@ img {
     margin-right: 0rem;
     padding-left: 10rem;
     padding-bottom: 20rem;
+    font-family: 'lato';
+}
+
+.tipoplanes label{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    background-color: rgba(0, 94, 114, 0.856);
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    width: fit-content;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
 }
 
 .precio {
