--- a/src/styles/headerNormal.css
+++ b/src/styles/headerNormal.css
@@ -84,7 +84,8 @@ a {
 
     .hamburguesa h2 {
         width: max-content;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
+        margin-bottom: 18px;
     }
 
     #session {
