--- a/src/styles/Forgot.css
+++ b/src/styles/Forgot.css
@@ -130,16 +130,17 @@
     }
 
     .candado{
-        flex-direction: column;
         width: 100%;
         justify-content: center;
         align-items: center;
+        margin-top: 3rem;
     }
     #slogan{
         width: fit-content;
     }
     .candado h2{
-        width: 80%;
+        width: 70%;
+        font-size: 1rem;
     }
     .formularioRestablecer h4{
         width: 80%;
@@ -158,6 +159,12 @@
 
     .formularioRestablecer button{
         margin-top: 0.5rem;
+    }
+    .forgotcontainer{
+        margin-top: 5rem;
+    }
+    .formularioRestablecer{
+        padding-top: 1rem;
     }
    
 }
