--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -169,6 +169,12 @@
     .logincontainer h1 {
         font-size: 2.5rem;
     }
+    .afiliar{
+        margin-bottom: 1rem;
+    }
+    .containergeneral{
+        margin-top: 4rem;
+    }
 
   
 }
