--- a/src/styles/ModalProfile3.css
+++ b/src/styles/ModalProfile3.css
@@ -20,7 +20,7 @@
     gap: 0.5rem;
 }
 
-.labelbuttons button{
+.labelbuttons button {
     font-size: 1rem;
     cursor: pointer;
     transition: transform 0.1s ease;
@@ -172,6 +172,17 @@
         height: 80%;
         overflow-y: auto;
         width: 50%;
+    }
+
+    .montos2 h1 {   
+        font-size: 1.5rem;
+    }
+
+    .labelbuttons button {
+        font-size: 1rem;
+        background-color: gainsboro;
+        border: none;
+        border-radius: 0.5rem;
     }
 
 
