--- a/src/styles/ModalProfile2.css
+++ b/src/styles/ModalProfile2.css
@@ -96,3 +96,24 @@
     }
 }
 
+
+@media (min-width: 1200px) and (max-width: 1600px) {
+    #scrol{
+        height: 30rem;
+    }
+    .caja2 h2{
+        font-size: 1.3rem;
+        font-weight: 700;
+    }
+    .caja2 h1{
+        background-color: rgb(84, 84, 84);
+        width: 70%;
+        padding: 0.9rem;
+        border-radius: 1rem;
+        color: rgb(255, 255, 255);
+        font-size: 1.5rem;
+    }
+}
+
+
+
