--- a/src/styles/ModalProfile4.css
+++ b/src/styles/ModalProfile4.css
@@ -98,7 +98,7 @@
 
 
 #x {
-    font-size: 1.4rem;
+    font-size: 2rem;
     font-family: 'Lato', sans-serif;
 }
 
@@ -319,6 +319,15 @@
         font-size: 2rem;
         font-family: 'Lato', sans-serif;
         font-weight: 700;
+    }
+
+    #beneficiario{
+        font-size: 1rem !important;
+        padding: 1rem;
+    }
+
+    .errorbenef h2{
+        font-size: 1.2rem;
     }
 
 }
