--- a/src/styles/page3.css
+++ b/src/styles/page3.css
@@ -113,6 +113,8 @@ img {
 .razonescontainer {
     display: flex;
     width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .razones ul,
