--- a/src/styles/ModalProfile3.css
+++ b/src/styles/ModalProfile3.css
@@ -174,6 +174,14 @@
         width: 50%;
     }
 
+    #scroll-inpt{
+        height: 1rem;
+    }
+
+    #scroll-inpt::placeholder{
+        font-size: 1.2rem;
+    }
+
     .montos2 h1 {   
         font-size: 1.5rem;
     }
