--- a/src/styles/ModalProfile4.css
+++ b/src/styles/ModalProfile4.css
@@ -105,17 +105,17 @@
     font-family: 'Lato', sans-serif;
 }
 
-.listaBeneficiarios,
 .box {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     width: 95%;
     font-family: 'Lato', sans-serif;
     font-size: 1.2rem;
     padding: 0 1rem;
     border-radius: 1rem;
-    align-items: center;
-    justify-content: space-between;
+    gap: 2rem;
 }
+
 
 .box label {
     display: flex;
@@ -126,6 +126,7 @@
     flex-direction: column;
 }
 
+
 .box h5 {
     font-size: 1.5rem;
     font-weight: 700;
@@ -135,13 +136,18 @@
     border-radius: 1rem;
 }
 
+.secbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #cruz {
     background-color: rgb(119, 119, 119);
     padding: 0.5rem 1rem;
     border-radius: 3rem;
     cursor: pointer;
     transition: .5s ease;
-    margin-left: 2rem;
 }
 
 #cruz:hover {
@@ -166,7 +172,6 @@
 
 #btn-editar {
     font-size: 1rem;
-    margin-left: 1rem;
     background-color: #005f9e;
     padding: 1rem;
     border-radius: 0.5rem;
@@ -175,9 +180,32 @@
 
 .optns {
     display: flex;
+    flex-direction: column;
     height: auto;
 }
 
+.secbox h5 {
+    margin: 0;
+}
+
+#scrollbenef4 {
+    overflow-y: scroll;
+    height: 80%;
+    scrollbar-width: thin;
+    scrollbar-color: #333 #f0f0f0;
+}
+
+#scrollbenef4::-webkit-scrollbar {
+    width: 5px;
+}
+
+#scrollbenef4::-webkit-scrollbar-thumb {
+    background-color: #005f9e;
+}
+
+#scrollbenef4::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+}
 
 
 @media (max-width : 767px) {
@@ -186,6 +214,7 @@
         gap: 1rem;
         justify-content: center;
         align-items: center;
+        flex-direction: row;
     }
 
 
@@ -225,6 +254,7 @@
     }
 
     .box {
+        display: flex;
         flex-direction: column;
     }
 
@@ -232,6 +262,7 @@
         margin: 0;
         height: 50%;
     }
+
 
 }
 
@@ -333,11 +364,11 @@
         font-size: 1.1rem !important;
         border-radius: .5rem;
         width: 20rem;
-        padding:  0.5rem;
+        padding: 0.5rem;
         padding-left: 1rem;
     }
-    
-    
+
+
 
 }
 
