--- a/src/styles/ModalProfile5.css
+++ b/src/styles/ModalProfile5.css
@@ -183,3 +183,60 @@
         overflow-y: auto;
     }
 }
+
+@media (min-width: 1200px){
+    #modal55{
+        width: 60%;
+        background-image: url('../assets/fondomodal5.png');
+    }
+
+    #modal55 label{
+        font-family: 'lato';
+        background-color: rgb(50, 50, 50);
+        font-size:0.8rem;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+    }
+    .modal5{
+        display: grid;
+        gap: 3rem;
+        grid-template-columns: repeat(3, 1fr);
+        margin-bottom: 2rem;
+        max-width: 100%;
+    }
+
+    .t p strong{
+        font-weight: bold;
+        font-size: 1rem;
+    }
+    .grid2{
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(min(33.33%, 100%), 1fr));
+    }
+
+    .sec4{
+        width: 100%;
+        margin: 0 auto;
+        grid-column: 3 span;
+    }
+
+    .sec1, .sec2, .sec3, .sec4{
+        background-color: rgb(50, 50, 50);
+    }
+ 
+    #walletmodal5{
+        word-wrap: break-word;
+    }
+
+    #transferir1{
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+
+    .cont21{
+        background-color: rgb(72, 72, 72);
+    }
+   
+}
