--- a/src/styles/ModalProfile5.css
+++ b/src/styles/ModalProfile5.css
@@ -184,20 +184,21 @@
     }
 }
 
-@media (min-width: 1200px){
-    #modal55{
+@media (min-width: 1200px) {
+    #modal55 {
         width: 60%;
         background-image: url('../assets/fondomodal5.png');
     }
 
-    #modal55 label{
+    #modal55 label {
         font-family: 'lato';
         background-color: rgb(50, 50, 50);
-        font-size:0.8rem;
+        font-size: 0.8rem;
         padding: 0.5rem;
         border-radius: 0.5rem;
     }
-    .modal5{
+
+    .modal5 {
         display: grid;
         gap: 3rem;
         grid-template-columns: repeat(3, 1fr);
@@ -205,38 +206,49 @@
         max-width: 100%;
     }
 
-    .t p strong{
+    .t p strong {
         font-weight: bold;
         font-size: 1rem;
     }
-    .grid2{
+
+    .grid2 {
         display: grid;
         gap: 2rem;
         grid-template-columns: repeat(auto-fit, minmax(min(33.33%, 100%), 1fr));
     }
 
-    .sec4{
+    .sec4 {
         width: 100%;
         margin: 0 auto;
         grid-column: 3 span;
     }
 
-    .sec1, .sec2, .sec3, .sec4{
+    .sec1,
+    .sec2,
+    .sec3,
+    .sec4 {
         background-color: rgb(50, 50, 50);
     }
- 
-    #walletmodal5{
+
+    #walletmodal5 {
         word-wrap: break-word;
     }
 
-    #transferir1{
+    #transferir1 {
         width: 50%;
         margin: 0 auto;
         margin-top: 2rem;
     }
 
-    .cont21{
+    .cont21 {
         background-color: rgb(72, 72, 72);
     }
-   
+
+    #transferir1 {
+        background: linear-gradient(to right, rgb(26, 116, 132), rgb(0, 56, 81));
+        padding: 0.5rem;
+        box-shadow: 23px 4px 13px 7px rgba(0,0,0,0.1);
+
+    }
+
 }
