--- a/src/styles/ModalProfile2.css
+++ b/src/styles/ModalProfile2.css
@@ -97,9 +97,9 @@
 }
 
 
-@media (min-width: 1200px) and (max-width: 1600px) {
+@media (min-width: 1200px) and (max-width: 1700px) {
     #scrol{
-        height: 90%;
+        height: 70%;
     }
     .caja2 h2{
         font-size: 1.3rem;
@@ -112,6 +112,10 @@
         border-radius: 1rem;
         color: rgb(255, 255, 255);
         font-size: 1.5rem;
+    }
+    .modal2 h1{
+        font-size: 1.7rem;
+        margin: 0;
     }
 }
 
