--- a/src/styles/ModalProfile3.css
+++ b/src/styles/ModalProfile3.css
@@ -166,12 +166,12 @@
 
 }
 
-@media only screen and (min-width: 1200px) and (max-width: 1600px) {
+@media only screen and (min-width: 1200px) and (max-width: 1700px) {
 
     #scrolleable3 {
-        height: 80%;
+        height: 90%;
         overflow-y: auto;
-        width: 50%;
+        width: 30%;
     }
 
     #scroll-inpt{
@@ -191,6 +191,29 @@
         background-color: gainsboro;
         border: none;
         border-radius: 0.5rem;
+    }
+
+    .modal3 h2{
+        margin-top: 0;
+        margin-bottom: 0;
+        font-size: 1.9rem;
+    }
+
+    #x1{
+        margin-top: 0;
+        position: absolute;
+        margin: 0 !important;
+        right: 1rem;
+        top: 1rem;
+        background-color: rgb(82, 82, 82);
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+    }
+
+    .join{
+        display: flex;
+        gap: 2rem;
+        margin-bottom: 1rem;
     }
 
 
