--- a/src/styles/ModalProfile5.css
+++ b/src/styles/ModalProfile5.css
@@ -52,6 +52,25 @@
     background: linear-gradient(to right, rgb(3, 180, 211), rgb(2, 80, 116));
     border-radius: 1rem;
     cursor: pointer;
+    font-size: 1.5rem;
+}
+
+.listadoPagos h2{
+    font-family: 'lato';
+    background: linear-gradient(to right, rgb(0, 124, 145), rgb(2, 80, 116));
+    font-weight: 700;
+    font-size: 1.4rem;
+    width: fit-content;
+    padding: 0.5rem 1rem;
+    margin: 0 auto;
+    border-radius: 0.5rem;
+    gap: 2rem;
+    margin-top: 1rem !important;
+    cursor: pointer;
+}
+.listadoPagos{
+    display: flex;
+    flex-direction: column;
 }
 
 .t h3 {
@@ -124,6 +143,10 @@
     border-radius: 1rem;
 }
 
+.sec4{
+    max-width: 95%;
+}
+
 
 @media (max-width: 767px) {
 
@@ -163,7 +186,7 @@
     #transferir1 {
         font-size: 1.4rem;
         padding: 1rem;
-        margin-bottom: 7rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -186,6 +209,7 @@
 
 @media (min-width: 1200px) {
     #modal55 {
+        height: 80%;
         width: 60%;
         background-image: url('../assets/fondomodal5.png');
     }
@@ -214,7 +238,8 @@
     .grid2 {
         display: grid;
         gap: 2rem;
-        grid-template-columns: repeat(auto-fit, minmax(min(33.33%, 100%), 1fr));
+        /* grid-template-columns: repeat(auto-fit, minmax(min(33.33%, 100%), 1fr)); */
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .sec4 {
@@ -228,6 +253,7 @@
     .sec3,
     .sec4 {
         background-color: rgb(50, 50, 50);
+        margin-bottom: 0;
     }
 
     #walletmodal5 {
@@ -247,8 +273,50 @@
     #transferir1 {
         background: linear-gradient(to right, rgb(26, 116, 132), rgb(0, 56, 81));
         padding: 0.5rem;
-        box-shadow: 23px 4px 13px 7px rgba(0,0,0,0.1);
+        box-shadow: 23px 4px 13px 7px rgba(0, 0, 0, 0.1);
 
     }
 
+    .sec4 h1 {
+        font-size: 1.3rem;
+    }
+
+    .cont21 h2 {
+        font-size: 1.5rem;
+    }
+
+    .sec1 h1,
+    .sec2 h1,
+    .sec3 h1 {
+        font-size: 1.3rem;
+    }
+
+    #modal55 h2 {
+        margin-top: 0;
+    }
+
+}
+
+@media (min-width: 1200px) and (max-width: 1700px) {
+    .sec4 h1 {
+        font-size: 1.3rem;
+    }
+  
+
+    .cont21 h2 {
+        font-size: 1.5rem;
+    }
+
+    .sec1 h1,
+    .sec2 h1,
+    .sec3 h1 {
+        font-size: 1.3rem;
+    }
+
+    #modal55 h2 {
+        margin-top: 0;
+    }
+    .grid2{
+        grid-template-columns: repeat(auto-fit, minmax(min(33.33%, 100%), 1fr));
+    }
 }
