--- a/src/styles/ModalProfile2.css
+++ b/src/styles/ModalProfile2.css
@@ -24,6 +24,7 @@
 #scrol{
     overflow-y: auto;
     overflow-x: hidden;
+    height: auto !important;
 }
 
 
@@ -86,6 +87,7 @@
     #continuar{
         margin-bottom: 5rem;
     }
+    
 
 
 }
@@ -98,9 +100,7 @@
 
 
 @media (min-width: 1200px) and (max-width: 1700px) {
-    #scrol{
-        height: 70%;
-    }
+
     .caja2 h2{
         font-size: 1.3rem;
         font-weight: 700;
