--- a/src/styles/ModalProfile3.css
+++ b/src/styles/ModalProfile3.css
@@ -137,7 +137,8 @@
     }
 
     .css-1llu0g7 {
-        width: 300px !important;
+        width: 80% !important;
+        height: 80% !important;
     }
 
     .caja3 h1 {
