--- a/src/styles/ModalProfile2.css
+++ b/src/styles/ModalProfile2.css
@@ -24,7 +24,7 @@
 #scrol{
     overflow-y: auto;
     overflow-x: hidden;
-    height: auto !important;
+    /* height: auto !important; */
 }
 
 
@@ -76,17 +76,26 @@
 @media (max-width: 767px){
     .modal2 h2{
         font-size: 1.3rem;
+        margin: 0;
     }
     .modal2{
         padding: 0;
     }
     .css-1x9pxnu{
         width: 80% !important;
-        height: 80% !important;
+        height:80% !important;
     }
-
-    #continuar{
-        margin-bottom: 5rem;
+    .join{
+        margin-bottom: 0;
+    }
+    .join h1{
+        margin-bottom: 0;
+    }
+    .caja2 h1{
+        margin-bottom: 0;
+    }
+    .modal2 p{
+        margin-bottom: 5px;
     }
     
 
