--- a/src/styles/ModalProfile4.css
+++ b/src/styles/ModalProfile4.css
@@ -217,6 +217,10 @@
         flex-direction: row;
     }
 
+    #scrollbenef4{
+        height: 80% !important;
+    }
+
 
     #btn-editar {
         margin-left: 0;
@@ -261,6 +265,18 @@
     #cruz {
         margin: 0;
         height: 50%;
+    }
+
+    #db{
+        display: none;
+    }
+    .check2{
+        margin-left: 120%;
+        margin-top: 10px;
+    }
+    .check2 h2{
+        padding: 0;
+        font-size: 1rem;
     }
 
 
